--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,1 +1,10 @@
+.app {
+    display: flex;
+    flex-direction: column;
+}
 
+.nasa-logo {
+    margin: auto;
+    width: 500px;
+    height: 300px;
+}
