--- a/src/styles/search-results.css
+++ b/src/styles/search-results.css
@@ -1,12 +1,5 @@
 .card-image {
-    width: 50%;
-    height: 50%;
-    justify-content: center;
-}
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+  height: 250px;
+  border-radius: 22px;
+  margin: 20px;
 }
