--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,23 +1,18 @@
 .search-input {
     margin: auto;
-    width: 20%;
-    height: 100px;
-    border-radius: 11px;
-    font-size: 20px;
+    border-radius: 15px;
+    font-size: 15px;
     padding: 0 10px;
+    background-color: orange;
+    height: 30px;
 }
 
 .search-form {
-    display: block;
-    margin-left: auto;        
-    margin-right: auto;        
-    width: 50%;
+    margin: 30px;
 }
 
 .search-btn {
-    display: block;
-    margin-left: auto;        
-    margin-right: auto;        
-    width: 50%;
-    background-color: red;
+    border-radius: 15px;
+    height: 30px;
+    background-color: orange;
 }
